# gerar_links_faturamento

./: .env  .gitignore  README.md  consolida-demostrativo.py  export_pdf.py  gerar_links_faturamento.py  gerar_links_faturamento.spec  pyproject.toml  requirements.txt  script.py
