[project]
name = "GerarLinksFaturamento"
version = "0.1"
description = "Gerar os links de faturamento!"

[tool.cxfreeze]
executables = [
    {script = "gerar_links_faturamento.py", base = "gui"}
]

[tool.cxfreeze.build_exe]
excludes = ["tkinter", "unittest"]
zip_include_packages = ["encodings", "PySide6", "shiboken6"]